docs: Add example WordPress Redis object cache and salt configurations to .env.example.

--- a/.env.example
+++ b/.env.example
@@ -5,12 +5,21 @@ DB_PASSWORD=secret
 DB_NAME=wordpress
 DB_PREFIX=wp_
 
+# Redis Configuration (if using a plugin like Redis Object Cache)
+WP_REDIS_HOST=${REDIS_HOST}
+WP_REDIS_PORT=${REDIS_PORT:-6379}
+WP_REDIS_DATABASE=0
+
 # Redis Configuration
 REDIS_HOST=redis
 REDIS_PORT=6379
 
 # WordPress Debug
 WP_DEBUG=true
+
+# Salts and Keys (Should be set in .env)
+# Generate keys with: curl -s https://api.wordpress.org/secret-key/1.1/salt/
+AUTH_KEY=${AUTH_KEY}
 
 # Security Keys & Salts
 # Generate these at https://api.wordpress.org/secret-key/1.1/salt/
