--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  wordpress:
+  debrand_backend_www:
     build: .
     container_name: debrand_backend_www
     environment:
@@ -36,7 +36,7 @@ services:
       - debrand_network
     restart: unless-stopped
 
-  frontend:
+  debrand_frontend_www:
     build:
       context: ./frontend
       args:
