--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: debrand_backend_www
     environment:
       # FrankenPHP Configuration
-      # - FRANKENPHP_CONFIG=worker ./public/index.php
+      - FRANKENPHP_CONFIG=worker ./public/index.php
 
       # WordPress Configuration
       - WORDPRESS_DB_HOST=${DB_HOST}
@@ -32,6 +32,7 @@ services:
     volumes:
       - ./wordpress:/app/public
       - ./mu-plugins:/app/public/wp-content/mu-plugins
+      - ./wp-config.php:/app/public/wp-config.php
     networks:
       - debrand_network
     restart: unless-stopped
