feat: set FrankenPHP SERVER_NAME environment variable to :80 in docker-compose.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       # FrankenPHP Configuration
       - FRANKENPHP_CONFIG=worker ./public/index.php
+      - SERVER_NAME=:80
 
       # WordPress Configuration
       - WORDPRESS_DB_HOST=${DB_HOST}
