build: Switch to local backend image build in docker-compose and simplify Dockerfile by removing multi-stage build, excessive dependencies, and detailed configurations.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
   wordpress:
-    image: dunglas/frankenphp:latest
+    build: ./backend
     container_name: debrand_backend_www
     environment:
       # --- FRANKENPHP CONFIG (Sintassi Map per sicurezza spazi) ---
       SERVER_NAME: ":80"
-      FRANKENPHP_CONFIG: "worker ./index.php"
+      # FRANKENPHP_CONFIG: "worker ./public/index.php"
       MAX_REQUESTS: "500"
       TRUSTED_PROXIES: "127.0.0.1,172.16.0.0/12,10.0.0.0/8"
 
